--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -23,4 +23,7 @@
     'blocks/speakers',
     'blocks/price',
     'blocks/input',
-    'blocks/registration'
+    'blocks/reviews',
+    'blocks/registration',
+    'blocks/contact',
+    'blocks/footer'
