--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -14,6 +14,11 @@
     overflow: hidden !important;
 }
 
+.circle {
+    border-radius: 50%;
+    object-fit: cover;
+}
+
 .hidden-mobile {
     @include mobile {
         display: none !important;
