--- a/styles/blocks/_price.scss
+++ b/styles/blocks/_price.scss
@@ -1,6 +1,10 @@
 .price {
     padding: 50px 0;
 
+        @include mobile {
+            padding: 11px 0 10px;
+        }
+
     &__main-title {
         margin-bottom: 40px;
         text-align: center;
@@ -9,11 +13,13 @@
     &__list {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        justify-items: center;
 
         @include tablet {
             display: flex;
             flex-direction: column;
             align-items: center;
+            gap: 24px;
         }
     }
 
