--- a/styles/blocks/_program.scss
+++ b/styles/blocks/_program.scss
@@ -2,6 +2,10 @@
 
     padding: 50px 0 115px;
 
+    @include mobile {
+        padding: 10px 0 17px;
+    }
+
     &__inner {
         display: flex;
         justify-content: space-between;
@@ -82,40 +86,40 @@
 
         @include tablet {
             grid-row-gap: 12px;
-            grid-column-gap: 20px;
+            grid-column-gap: 2px;
             margin-top: 24px;
         }
+
+        @include mobile {
+            grid-column-gap: 10px;
+        }
     }
-    
-    &__images-list-item {
-        border-radius: 50%;
-        width: 289px;
-        height: 289px;
+
+    &__images-list-item  {
+        width: 291px;
+        height: 291px;
         border: 1px var(--color-pink) solid;
         text-align: center;
         transition: var(--transition-duration);
         position: relative;
-
 
         @include hover {
             transform: translateY(-25px);
             @include box-shadow-big;
         }
 
-        background-color: var(--color-brown); // Тимчасово
-
         &:nth-of-type(2n) {
             top: 65px;
         }
 
         @include desktop {
-            width: 220px;
-            height: 220px;
+            width: 222px;
+            height: 222px;
         }
 
         @include tablet {
-            width: 140px;
-            height: 140px;
+            width: 152px;
+            height: 152px;
 
             @include hover {
                 transform: translateY(-10px);
@@ -131,8 +135,8 @@
         }
 
         @include mobile {
-            width: 132px;
-            height: 132px;
+            width: 134px;
+            height: 134px;
 
             &:nth-of-type(2) {
                 top: 15px;
@@ -144,35 +148,93 @@
         }
 
         &::before, &::after {
-            left: 0;
-            position: absolute;
+            content: '';
             width: 100%;
-            text-align: center;
-            color: var(--color-white);
-
-            @include tablet {
-                font-size: 14px;
-                line-height: 17px;
-            }
+            height: 100%;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            border-radius: var(--border-circle);
         }
 
         &::before {
-            content: 'Type of the event';
-            top: 50%;
-            font-family: 'Montserrat Alternates';
+            z-index: -2;
+            background-size: cover;
+            background-position: center;
+        }
 
-            @include mobile {
-                top: 40%;
-            }
+        &:nth-of-type(1)::before {
+            background-image: url(../../img/circle1.jpg);
+        }
+
+        &:nth-of-type(2)::before {
+            background-image: url(../../img/circle2.jpg);
+        }
+
+        &:nth-of-type(3)::before {
+            background-image: url(../../img/circle3.jpg);
+        }
+
+        &:nth-of-type(4)::before {
+            background-image: url(../../img/circle4.jpg);
         }
 
         &::after {
-            content: 'Cooking classes';
-            top: 60%;
+            background: linear-gradient(360deg, rgba(0,0,0,1) 0%, rgba(156,156,156,1) 100%);
+            z-index: -1;
+            opacity: 35%;
+        }
+    }
 
-            @include mobile {
-                top: 60%;
-            }
+    &__images-list-item-title, &__images-list-item-subtitle {
+        display: flex;
+        flex-direction: column;
+        margin-top: 190px;
+        color: #FFFFFF;
+        font-family: 'Montserrat Alternates';
+
+        @include desktop {
+            margin-top: 105px;
+        }
+
+        @include tablet {
+            margin-top: 72px;
+        }
+
+        @include mobile {
+            margin-top: 65px;
+        }
+    }
+
+    &__images-list-item-title {
+        font-size: 24px;
+        line-height: 29px;
+
+        @include tablet {
+            font-size: 16px;
+            line-height: 20px;
+        }
+
+        @include mobile {
+            font-size: 14px;
+            line-height: 17px;
+        }
+    }
+
+    &__images-list-item-subtitle {
+        margin-top: 16px;
+        font-weight: 400;
+        font-size: 16px;
+
+        @include tablet {
+            font-size: 14px;
+            line-height: 17px;
+            margin-top: 7px;
+        }
+
+        @include tablet {
+            font-size: 12px;
+            line-height: 15px;
         }
     }
 }
